# nnActive

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  download_kits.sh  pyproject.toml
assets/: download_from_huggingface.py
benchmark/: aggregations.py  gpu_query_peak.py  postprocessing.py  query_settings.py  select_non_overlapping.py
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: nnactive.calculate_uncertainties.calculate_uncertainties.rst  nnactive.calculate_uncertainties.calculate_uncertainties_from_softmax_preds.rst  nnactive.calculate_uncertainties.get_pred_image_info.rst  nnactive.calculate_uncertainties.get_predicted_image_names.rst  nnactive.calculate_uncertainties.load_softmax_predictions.rst  nnactive.calculate_uncertainties.rst  nnactive.data.convert_to_partannotated.convert_dataset_to_partannotated.rst  nnactive.data.convert_to_partannotated.generate_custom_splits_file.rst  nnactive.data.convert_to_partannotated.kfold_cv.rst  nnactive.data.convert_to_partannotated.placeholder_patch_anno.rst  nnactive.data.convert_to_partannotated.rst  nnactive.data.create_empty_masks.add_ignore_label_to_dataset_json.rst  nnactive.data.create_empty_masks.create_empty_mask.rst  nnactive.data.create_empty_masks.rst  (+25 more)
documentation/: human_al.md
ignore_scripts/: eval_epochs.py  times.py
manual_test/: README.md  brats_integrity_mask_for_norm.py  label_in_split_check.py
nnactive/: __init__.py  analysis.py  calculate_uncertainties.py  cli.py  convert_to_partannotated.py  logger.py  masking.py  paths.py  pyproject.toml  query_patches.py  query_pool.py  resample_dataset.py  update_data.py
nnactive/aggregations/: convolution.py
nnactive/analyze_results/: README.md  ablation_patch_size.py  ablation_patchsize-bootstrap.py  ablation_powerbald.py  ablation_query_size.py  ablation_query_size_ranking.py  ablation_training_length.py  amos_check.py  bootstrap_ranking.py  combine_settings.py  evaluator.py  fgeff_plot.py  main_method_ranking_analysis.py  main_results_tables.py  ppm_rel_improvement.py  ppm_results.py  setup.py  visualize_scores.py
nnactive/cli/: __init__.py  multi_loop_AL.py  plot_experiment.py  registry.py
nnactive/config/: __init__.py  hippcampus.py  struct.py
nnactive/data/: __init__.py  annotate.py  convert_to_partannotated.py  create_empty_masks.py  prepare_starting_budget.py  resampling.py  resampling_fabian.py  starting_budget.py  utils.py
nnactive/full_data_results/: Dataset004_Hippocampus__nnUNetTrainer.json  Dataset027_ACDC__nnUNetTrainer.json  Dataset027_ACDC__nnUNetTrainer_1000epochs.json  Dataset027_ACDC__nnUNetTrainer_200epochs.json  Dataset027_ACDC__nnUNetTrainer_500epochs.json  Dataset135_KiTS2021__nnUNetTrainer.json  Dataset135_KiTS2021__nnUNetTrainer_1000epochs.json  Dataset135_KiTS2021__nnUNetTrainer_200epochs.json  Dataset135_KiTS2021__nnUNetTrainer_500epochs.json  Dataset216_AMOS2022_task1__nnUNetTrainer.json  Dataset216_AMOS2022_task1__nnUNetTrainer_1000epochs.json  Dataset216_AMOS2022_task1__nnUNetTrainer_200epochs.json  Dataset216_AMOS2022_task1__nnUNetTrainer_500epochs.json  README.md
nnactive/ignore_scripts/: mama_mia_setup.py
nnactive/loops/: cross_validation.py  loading.py
nnactive/manual_test/: label_in_split_check.py
nnactive/nnactive/: logger.py  masking.py  paths.py  production.py  query_pool.py
nnactive/nnunet/: fingerprint_extractor.py  io.py  paths.py  predict.py  preprocessor.py  utils.py
nnactive/nnunet_examples/: alegra_conversion.py
nnactive/query/: get_locs.py  random.py
nnactive/results/: state.py  struct.py  utils.py
nnactive/strategies/: README.md  __init__.py  bald.py  base.py  base_uncertainty.py  entropy_exp.py  entropy_pred.py  random.py  randomlabel.py  randomlabel_all_classes.py  uncertainties.py
nnactive/tests/: test_aggregate_uncertainites.py  test_query_patches.py
nnactive/uncertainty_aggregation/: aggregate_uncertainties.py
nnactive/utils/: hostutils.py  image_reading.py  io.py  patches.py  pyutils.py  timer.py  torchutils.py
nnactive_playground/: __init__.py  calculate_uncertainties.py  query_patches.py
nnactive_playground/data/: convert_to_nnunet.py  convert_to_partannotated.py  convert_to_unanno.py  create_empty_masks.py  prepare_starting_budget.py
nnactive_playground/tests/: test_aggregate_uncertainites.py
nnactive_playground/uncertainty_aggregation/: aggregate_uncertainties.py
nnunetv2/: ._documentation  ._nnunetv2
nnunetv2/documentation/: benchmarking.md  changelog.md  dataset_format_inference.md  explanation_plans_files.md  ignore_label.md  manual_data_splits.md  pretraining_and_finetuning.md  region_based_training.md  resenc_presets.md  setting_up_paths.md
scripts/: convert_to_partannotated.py  create_mitk_geometry_patch.py  create_val_split.py  get_performance.py  manual_selection_to_loop.py  mitk_geometry.xml  multi_loop_AL.py  plot_experiment.py  predict_nnUNet_ensemble.py  query_manual.py  query_step.py  resample_nnunet_dataset.py  setup_al_experiment.py  train_nnUNet_ensemble.py  update_data.py
setup_experiments/: acdc.py  acdc_small.py  airway.py  airway_small.py  amos.py  amos_small.py  brats.py  brats_small.py  experiment_setup.py  hippocampus.py  hippocampus_new.py  kits.py  kits_small.py
(+211 files in other folders)
