[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nnactive_playground"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "batchgenerators",
    "nnunetv2 @ git+ssh://git@phabricator.mitk.org:2222/source/nnunet.git@nnunet_remake",
    "acvl_utils @ git+ssh://git@codebase.helmholtz.cloud/hi-dkfz/applied-computer-vision-lab/tools/acvl_utils.git",
    "dynamic_network_architectures @ git+ssh://git@codebase.helmholtz.cloud/hi-dkfz/applied-computer-vision-lab/tools/dynamic-network-architectures.git@recycle_unet",
    "SimpleITK",
    "rich",
    "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipython",
  "pylint",
  "black",
  "debugpy",
  "sphinx<6",
  "pydata-sphinx-theme",
]

[tool.setuptools.packages.find]
include = ["nnactive_playground*"]

[tool.setuptools_scm]
write_to = "nnactive_playground/_version.py"

[tool.pylint]
extension-pkg-allow-list = [
  "numpy",
  "torch",
]
class-const-naming-style = "any"
load-plugins = ["pylint.extensions.docparams"]

disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "missing-module-docstring",
]

max-args = 10
max-attributes = 20
ignore-paths = [
]

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"
