[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nnactive"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "batchgenerators",
    "nnunetv2 @ git+ssh://git@git.dkfz.de/mic/internal/nnu-net.git@nnactive",
    "SimpleITK",
    "rich",
    "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipython",
  "pylint",
  "black",
  "debugpy",
  "sphinx<6",
  "pydata-sphinx-theme",
]

[tool.setuptools.packages.find]
include = ["nnactive*"]

[tool.setuptools_scm]
write_to = "nnactive/_version.py"

[tool.pylint]
extension-pkg-allow-list = [
  "numpy",
  "torch",
]
class-const-naming-style = "any"
load-plugins = ["pylint.extensions.docparams"]

disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "missing-module-docstring",
  "unspecified-encoding",
  "line-too-long"
]

max-args = 10
max-attributes = 20
ignore-paths = [
]

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"
