[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nnactive"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "batchgenerators",
    "nnunetv2 @ git+ssh://git@git.dkfz.de/mic/internal/nnu-net.git@nnactive",
    "SimpleITK",
    "rich",
    "pydantic",
    "xmltodict",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipython",
  "pylint",
  "black",
  "debugpy",
  "sphinx<6",
  "pydata-sphinx-theme",
  "mypy"
]

[project.scripts]
nnactive = "nnactive.cli:main"

[tool.setuptools.packages.find]
include = ["nnactive*"]

[tool.setuptools_scm]
write_to = "nnactive/_version.py"

[tool.pylint]
extension-pkg-allow-list = [
  "numpy",
  "torch",
]
generated-members = ["numpy.*","torch.*"]
class-const-naming-style = "any"
load-plugins = ["pylint.extensions.docparams"]

disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "missing-module-docstring",
  "unspecified-encoding",
  "line-too-long"
]

max-args = 10
max-attributes = 20
ignore-paths = [
]
docstring-min-length = 2

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"

[tool.mypy]
strict = false

show_error_codes = true
show_column_numbers = true
follow_imports = "silent"

exclude = [
]

files = [
  "nnactive",
]

python_version = "3.10"

warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
  "nnunetv2.*",
  "acvl_utils.*",
  "batchgenerators.*",
  "albumentations.*",
  "timm.*",
  "tensorflow.*",
  "tensorboard.*",
  "matplotlib.*",
  # "numpy.*",
  "multiprocessing.*",
  "torchvision.*",
  "torch.*",
  "scipy.*",
  "IPython.*",
  "skimage.*",
  # "mypy.*",
  "usort.*",
  "sklearn.*",
  "hydra_zen.*",
  "hydra_zen",
  "deepdiff.*",
  "cv2.*",
  "pl_bolts.*",
  "seaborn",
  "pssh.*",
  "wilds.*",
  "robustness.*",
]
ignore_missing_imports = true
